implement share file into team functionality -adjust notification bar style

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -475,6 +475,14 @@ Dark mode
     color: #fff;
 }
 
+.dark-mode .offcanvas{
+    background-color: rgb(211,211,211);
+}
+
+.dark-mode .card{
+    background-color: rgb(211,211,211);
+}
+
 /*
 Orange mode
 */
@@ -536,4 +544,9 @@ Pink mode
 
 .pink-mode a {
   color: #9E5062;
+}
+
+.file-link {
+    font: inherit;
+    color: #0d6efd;
 }
