--- a/tasks/templates/shared_file_list.html
+++ b/tasks/templates/shared_file_list.html
@@ -32,7 +32,7 @@
 
                                         </div>
                                         <h6 class="mb-0">
-                                            <strong>{{ file.shared_file.get_simple_file_name }}</strong></h6>
+                                            <strong>{{ file.shared_file.get_file_name_without_path }}</strong></h6>
                                         <p class="mb-0 opacity-75"><strong>Uploaded on: </strong><span
                                                 class="upload-time">{{ file.shared_file.uploaded_at }}</span></p>
                                         <p class="mb-0 opacity-75">
