--- a/static/css/share_file.css
+++ b/static/css/share_file.css
@@ -74,6 +74,13 @@
     display: flex;
     align-items: center;
 }
+
+.share-btn-team{
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+}
+
 .bi-box-arrow-up {
     margin-right: 3px;
 }
@@ -106,4 +113,14 @@
     width: 65%;
     margin: auto;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+}
+
+.share-form-team{
+    background-color: transparent;
+    width: 100%;
+    margin: auto;
+}
+
+.share-items-container{
+    width: 100%;
 }
