fix bug for toggle button -issue of 'change dark/light mode does not bring the changes when go to profile, password or preference pages' fixed

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -483,6 +483,10 @@ Dark mode
     background-color: rgb(211,211,211);
 }
 
+.dark-mode .form-check-label{
+    color: #111111;
+}
+
 /*
 Orange mode
 */
@@ -549,4 +553,8 @@ Pink mode
 .file-link {
     font: inherit;
     color: #0d6efd;
+}
+
+#themePreferencesForm{
+
 }
