--- a/tasks/templates/password.html
+++ b/tasks/templates/password.html
@@ -19,5 +19,9 @@
             </form>
         </div>
     </div>
+    <!--Apply the dark/light mode-->
+    <div style="display:none;">
+        {% include 'partials/sidebar.html' %}
+    </div>
     <script src="{% static 'js/form_input_label_handler.js' %}"></script>
 {% endblock %}
