--- a/tasks/templates/profile.html
+++ b/tasks/templates/profile.html
@@ -85,6 +85,10 @@
             </form>
         </div>
     </div>
+    <!--Apply the dark/light mode-->
+    <div style="display:none;">
+        {%include 'partials/sidebar.html'%}
+    </div>
 
 
     <script src="{% static "js/popup_window.js" %}"></script>
