- complete transcription of voice comment - edit testing to match new transcript function - voice comment bug fixing

--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -83,11 +83,11 @@
 
 								<!-- Refresh Section -->
 								<div id="refreshContainer" style="display: none;">
-									<p class="centered-text">Voice comments saved</p>
-									<p class="centered-text">
+									<div class="centered-text">Voice comments saved</div>
+									<div class="centered-text">
 										Refresh page to view:
 										<button id="refresh"><i class="fas fa-redo"></i></button>
-									</p>
+									</div>
 									<br>
 								</div>
 
