render the comment dynamically

--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -109,11 +109,10 @@
 						<div class="tab-pane fade" id="text-pill" role="tabpanel" aria-labelledby="text-pill-tab">
                             <button class="btn-primary" id="addCommentBtn" onclick="addComment()">+Add Note</button>
                             <div class="input-group mb-3" id="inputText" style="display: none">
-                                <textarea id="textArea" type="text" class="form-control" style="width: auto" placeholder="Add your text comment here..."></textarea>
+                                <textarea id="textArea" type="text" class="form-control" style="width: auto; padding: 0; border-radius: 10px" placeholder="Add your text comment here..."></textarea>
                                 <button class="btn-primary" onclick="saveComment()">save</button>
                             </div>
                             <div id="commentsContainer"></div>
-                            
 						</div>
 					</div>
 
