--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -275,9 +275,10 @@ body {
 .commentsContainer{
 	width: auto;
 	height: auto;
-	padding : 3px;
+	padding : 10px;
     margin-bottom: 10px;
     margin-top: 10px;
+
 }
 
 .text-comment {
@@ -381,16 +382,16 @@ textarea:focus {
 }
 .tab-content{
   position: absolute;
-  width: auto;
-  height: auto;
   margin-top: -50px;
+  width: 100%;
+  height: 100%;
   background: #fff;
   color: #000;
-  border-radius: 30px;
+  border-radius: 10px;
   z-index: 1000;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
-  padding:30px;
-  margin-bottom: 50px;
+  padding: 30px;
+  margin-bottom: 10px;
 }
 
 .button-container {
@@ -399,6 +400,8 @@ textarea:focus {
 .card > div {
     position: relative;
 }
+
+
 .btn-close {
     position: absolute;
     top: 0.5rem;
