--- a/static/css/filelist.css
+++ b/static/css/filelist.css
@@ -34,6 +34,12 @@
     gap: 10px;
     padding: 20px;
     border: 10px;
+    flex-direction: row;
+    height: 880px;
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+        background-color: transparent;
+    }
 }
 
 .list-item{
