--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -8,9 +8,9 @@
 
 <body>
 {% include 'partials/messages.html'%}
-<div class="col-12 p-2">
-    <div class="row d-flex justify-content-between">
-        <div class="col-lg-4 col-sm-6">
+<div class="col-12">
+    <div class="row d-flex justify-content-center">
+        <div class="col-12">
             <h1>My files:</h1>
             <div class="delete-all" style="display: flex; align-items: center;">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -23,10 +23,10 @@
                     <button type="submit" class="btn btn-danger btn-sm"><i class="bi bi-trash-fill"></i>Delete</button>
                 </form>
             </div>
-            <div class="list-container custom-list-size">
+{#            <div class="list-container custom-list-size">#}
                 <div class="list-group" id="fileList">
                     {% for upload in uploads %}
-                    <div class="flex-column flex-md-row list-item" aria-current="true">
+                    <div class="flex-md-row list-item" aria-current="true">
                         <div class="text-list-item p-3 gap-2 w-100">
                             <form method="post" action="{%  url 'pdf_viewer' %}" class="d-inline" target="_blank" id="viewerForm{{ upload.id }}">
                                 {% csrf_token %}
@@ -37,7 +37,7 @@
                                             <div class="mb-1">
                                                 <img src="{{ upload.owner.avatar_url }}" alt="pdf" width="32" height="32" class="rounded-circle flex-shrink-0">
                                             </div>
-                                            <small class="opacity-50 justify-content-md-end" id="uploadTime">Uploaded {{ upload.upload_time_difference}}</small>
+                                            <small class="opacity-50 justify-content-md-end" id="uploadTime">Edited {{ upload.upload_time_difference}}</small>
 
                                         </div>
                                         <h6 class="mb-0"><strong>{{ upload.get_file_name_without_path }}</strong></h6>
@@ -81,7 +81,7 @@
                     </div>
                     {% endfor %}
                 </div>
-            </div>
+{#            </div>#}
         </div>
     </div>
 </div>
