--- a/tasks/templates/share_file.html
+++ b/tasks/templates/share_file.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     {% endif %}
-    <div class="row mt-1">
+    <div class="row mt-1" style="margin:auto;width:85%">
       {% for user in all_users %}
         <div class="col-sm-4 col-md-3 col-lg-2 d-none search-filter d-flex flex-column justify-content-center align-items-center" value="{{ user.id }}">
           <div class="text-center">
