--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -79,8 +79,8 @@
 
 								<!-- Saved Voice Comments Section -->
 								<div id="voiceCommentLabel" class="centered-text">
-									<div id="collapseButton" class="collapse-button">
-										<i class="fas fa-chevron-right"></i>
+									<div id="collapseContainer">
+										<i id="collapseButton" class="fas fa-angle-right"></i>
 									</div>
 									&nbsp;Saved Voice Comments
 								</div>
