change whole website font style

--- a/tasks/templates/shared_file_list.html
+++ b/tasks/templates/shared_file_list.html
@@ -36,7 +36,7 @@
                                         <p class="mb-0 opacity-75"><strong>Uploaded on: </strong><span
                                                 class="upload-time">{{ file.shared_file.uploaded_at }}</span></p>
                                         <p class="mb-0 opacity-75">
-                                            <strong>Comment:</strong>{{ file.shared_file.comments }}</p>
+                                            <strong>Description:</strong>{{ file.shared_file.comments }}</p>
 
                                     </div>
                                 </a>
