--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -118,7 +118,7 @@
                                                         <p class="mb-0 opacity-75"><strong>Uploaded on: </strong><span
                                                                 class="upload-time">{{ upload.uploaded_at }}</span></p>
                                                         <p class="mb-0 opacity-75">
-                                                            <strong>Comment:</strong>{{ upload.comments }}</p>
+                                                            <strong>Description:</strong>{{ upload.comments }}</p>
 
                                                     </div>
                                                 </a>
