--- a/static/css/login_and_signup.css
+++ b/static/css/login_and_signup.css
@@ -41,7 +41,7 @@ img {
     border: 1rem;
     padding: .5rem;
     display: grid;
-    grid-template-columns: 1fr 19fr 40fr;
+    grid-template-columns: 20fr 20fr 20fr;
     align-items: center;
     height: 100vh;
 }
@@ -88,7 +88,7 @@ form {
 
 form > div {
     position: relative;
-    margin-bottom: 2rem;
+    margin-bottom: 1.2rem;
 }
 
 .mainContainer label {
@@ -206,4 +206,8 @@ a:hover {
     40% {
         transform: scale(1);
     }
+}
+
+*, *:before, *:after{
+    font-size: 16px;
 }
