--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,3 +1,9 @@
 .navbar-brand-left {
   text-align: left;
 }
+
+*, *:before, *:after{
+  box-sizing: border-box;
+  padding: 0; margin: 0;
+  font: 300 1em/1.5 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+}
