--- a/tasks/templates/partials/menu.html
+++ b/tasks/templates/partials/menu.html
@@ -22,7 +22,7 @@
       </span></a>
 
     </li>
-    <li class="nav-item dropdown">
+    <li class="nav-item dropdown" style="top:2px">
       <a class="nav-link" href="#" id="user-account-dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           {% if user.avatar_url == settings.DEFAULT_IMAGE_URL %}
             <img src="{{ user.avatar_url }}" alt="Profile image of {{ user.username }}"
