--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -290,10 +290,18 @@ body {
     width: 100%;
     margin: auto;
 }
+.card.mb-3 {
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.card-title {
+    margin: 0;
+}
 
 .card-img-top {
-    max-width: 10%;
-    height: auto;
+    width: 30px;
+    height: 30px;
 }
 
 .card-body {
