--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -84,7 +84,7 @@ body {
 	overflow: auto;
     display: flex; /* Use flexbox */
     justify-content: center; /* Center horizontally */
-	/*background: #6c757d;*/
+	background: #6c757d;
 }
 #container
 {
